# workspace-map

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
examples/: workspace-map.yaml
src/workspace_map/: __init__.py  cli.py  config.py  index.py  reranker.py  search.py  tokenizer.py
src/workspace_map/claude_code/: __init__.py  hook.py  infra.py  sessions.py
src/workspace_map/extractors/: __init__.py  dart.py  javascript.py  markdown.py  python.py  shell.py
tests/: conftest.py  test_config.py  test_extractors.py  test_index.py  test_search.py  test_tokenizer.py
tests/fixtures/: sample.dart  sample.js  sample.md  sample.py  sample.sh
