[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "workspace-map"
version = "0.1.0"
description = "Multi-repo code indexer with BM25 search. Claude Code integration built-in."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Sarah Magui", email = "212162984+Evey-Vendetta@users.noreply.github.com" },
]
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
]

[project.optional-dependencies]
ai = [
    "anthropic>=0.40",
]

[project.scripts]
wmap = "workspace_map.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/workspace_map"]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
